Kubernetes/flask-api-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-api
  labels:
    name: flask-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-api
  template:
    metadata:
      labels:
        app: flask-api
    spec:
      containers:
      - name: flask-api
        image: localhost:5000/flask_api:latest
      restartPolicy: Always
